--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -729,6 +729,8 @@
         }
     },
     "langchain": {
+        "title": "LangChain Tools",
+        "test": "LangChain Test",
         "processing": "Processing...",
         "run": "Run",
         "options": "Options",
